<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AboutProgramActivity"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/ic_ufa_image"/>

    <TextView
            style="@style/about_program_style"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorBlack"
            android:textSize="15dp"
            android:text="@string/ufa_info"/>

    <TextView
            android:text="@string/site"
            style="@style/about_program_style"/>

    <TextView
            android:id="@+id/text_site"
            android:text="@string/text_site"
            android:textColor="@color/colorBlack"
            style="@style/about_program_style"
            android:clickable="true"/>

    <TextView
            android:text="@string/number"
            style="@style/about_program_style"/>

    <TextView
            android:id="@+id/text_number"
            android:text="@string/text_number"
            android:textColor="@color/colorBlack"
            style="@style/about_program_style"
            android:clickable="true"
            android:layout_marginBottom="30dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_prog_name"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_prog_autor"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_prog_version"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

    </LinearLayout>

</ScrollView>