<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/navigationView"
        tools:context=".activities.AuthorizationActivity">

    <ImageView
            android:src="@drawable/ic_auth_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="30dp"/>

    <EditText
            android:id="@+id/auth_email"
            style="@style/authorization_activity_style"
            android:inputType="textEmailAddress"
            android:hint="@string/auth_email"/>

    <EditText
            android:id="@+id/auth_password"
            style="@style/authorization_activity_style"
            android:inputType="textPassword"
            android:hint="@string/auth_password"/>

    <Button
            android:id="@+id/auth_enter"
            style="@style/authorization_activity_style"
            android:background="@color/colorGreen"
            android:textColor="@color/colorWhite"
            android:text="@string/auth_enter"/>

    <TextView
            android:id="@+id/auth_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_activity"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:textStyle="italic"
            android:layout_marginTop="30dp"
            android:layout_marginStart="140dp"
            android:clickable="true"/>

</LinearLayout>