<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddNewsActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <EditText
                android:id="@+id/add_news_title"
                android:hint="Заголовок новости"
                style="@style/add_news_style"/>

        <TextView
                android:text="@string/add_news_text_above_photo"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                style="@style/add_news_style"/>

        <ImageView
                android:id="@+id/add_news_image"
                android:src="@drawable/ic_add_news_photo"
                android:clickable="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

        <EditText
                android:id="@+id/add_news_text"
                android:hint="Текст новости"
                android:inputType="textMultiLine"
                android:maxLines="6"
                style="@style/add_news_style"/>

        <Button
                android:id="@+id/add_news_button"
                android:text="@string/add_news_button"
                android:textColor="@color/colorWhite"
                android:background="@color/colorGreen"
                style="@style/add_news_style"/>

        <TextView
                android:text="@string/add_news_text_under_btn"
                android:textSize="18dp"
                android:layout_marginLeft="40dp"
                style="@style/add_news_style"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>